<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sentinel_name" translatable="false">Sentinel</string>
    <string name="sentinel_preferences">Preferences</string>
    <string name="sentinel_application">Application</string>
    <string name="sentinel_device">Device</string>
    <string name="sentinel_tools">Tools</string>
    <string name="sentinel_permissions">Permissions</string>
    <string name="sentinel_settings">Settings</string>
    <string name="sentinel_app_info">App info</string>
    <string name="sentinel_bundle_monitor">Bundle monitor</string>
    <string name="sentinel_crash_monitor">Crash monitor</string>
    <string name="sentinel_certificates">Certificates</string>
    <string name="sentinel_share">Share</string>
    <string name="sentinel_notify">Notify</string>
    <string name="sentinel_limit">Limit</string>
    <string name="sentinel_clear">Clear</string>
    <string name="sentinel_search">Search</string>
    <string name="sentinel_show">Show</string>
    <string name="sentinel_save">Save</string>
    <string name="sentinel_change">Change</string>

    <string name="sentinel_network">Network</string>
    <string name="sentinel_memory">Memory</string>
    <string name="sentinel_analytics">Analytics</string>
    <string name="sentinel_database">Database</string>
    <string name="sentinel_report">Report</string>
    <string name="sentinel_bluetooth">Bluetooth</string>
    <string name="sentinel_distribution">Distribution</string>
    <string name="sentinel_design">Design</string>
    <string name="sentinel_logger">Logger</string>

    <string name="sentinel_triggers">Triggers</string>
    <string name="sentinel_share_format">Share format</string>

    <string name="sentinel_plain">Plain</string>
    <string name="sentinel_json">JSON</string>
    <string name="sentinel_xml">XML</string>
    <string name="sentinel_html">HTML</string>
    <string name="sentinel_table">Table</string>
    <string name="sentinel_markdown">Markdown</string>

    <string name="sentinel_version_code">Version code</string>
    <string name="sentinel_version_name">Version name</string>
    <string name="sentinel_first_install">First install</string>
    <string name="sentinel_last_update">Last update</string>
    <string name="sentinel_min_sdk">Min SDK</string>
    <string name="sentinel_target_sdk">Target SDK</string>
    <string name="sentinel_package_name">Package name</string>
    <string name="sentinel_process_name">Process name</string>
    <string name="sentinel_task_affinity">Task affinity</string>
    <string name="sentinel_locale_country">Locale country</string>
    <string name="sentinel_locale_language">Locale language</string>
    <string name="sentinel_installer_package">Installer</string>
    <string name="sentinel_manufacturer">Manufacturer</string>
    <string name="sentinel_model">Model</string>
    <string name="sentinel_id">id</string>
    <string name="sentinel_bootloader">Bootloader</string>
    <string name="sentinel_board">Board</string>
    <string name="sentinel_architectures">Architectures</string>
    <string name="sentinel_codename">Codename</string>
    <string name="sentinel_release">Release</string>
    <string name="sentinel_sdk">sdk</string>
    <string name="sentinel_security_patch">Security patch</string>
    <string name="sentinel_manual">Manual</string>
    <string name="sentinel_foreground">Foreground</string>
    <string name="sentinel_shake">Shake</string>
    <string name="sentinel_proximity">Proximity</string>
    <string name="sentinel_usb_connected">USB connected</string>
    <string name="sentinel_airplane_mode_on">Airplane mode on</string>
    <string name="sentinel_emulator">Emulator</string>
    <string name="sentinel_auto_time">Automatic time</string>
    <string name="sentinel_auto_timezone">Automatic timezone</string>
    <string name="sentinel_rooted">Rooted</string>
    <string name="sentinel_screen_width">Screen width</string>
    <string name="sentinel_screen_height">Screen height</string>
    <string name="sentinel_screen_size">Screen size</string>
    <string name="sentinel_screen_density">Screen density</string>
    <string name="sentinel_font_scale">Font scale</string>

    <string name="sentinel_bundle_monitor_empty">No bundles collected.</string>
    <string name="sentinel_bundle_activity_intent_extras">Activity Intent extras</string>
    <string name="sentinel_bundle_activity_saved_state">Activity Saved State</string>
    <string name="sentinel_fragment_arguments">Fragment arguments</string>
    <string name="sentinel_fragment_saved_state">Fragment Saved State</string>

    <string name="sentinel_sort_preference_by_name">Sort preferences by name</string>
    <string name="sentinel_hide_expands_the_preferences">Hide/expand the preferences</string>
    <string name="sentinel_preferences_editor">Preferences editor</string>
    <string name="sentinel_key">Key</string>
    <string name="sentinel_current_value">Current value</string>
    <string name="sentinel_new_value">New value</string>
    <string name="sentinel_text_copied">Text copied to clipboard.</string>
    <string name="sentinel_failed_to_copy_to_clipboard">Failed to copy to clipboard</string>

    <string name="sentinel_crash_notification_title">Sentinel detected a crash in %s</string>
    <string name="sentinel_crash_notification_subtitle">Tap here to see crash details.</string>
    <string name="sentinel_anr_notification_title">Sentinel detected an ANR in %s</string>
    <string name="sentinel_anr_notification_subtitle">Tap here to see ANR details.</string>
    <string name="sentinel_crash">Crash</string>
    <string name="sentinel_stacktrace">StackTrace</string>
    <string name="sentinel_thread">Thread</string>
    <string name="sentinel_daemon">Daemon</string>
    <string name="sentinel_crash_empty">No crashes detected.</string>
    <string name="sentinel_notify_uncaught">Notify uncaught exceptions</string>
    <string name="sentinel_notify_anr">Notify "Application Not Responding"</string>
    <string name="sentinel_include_all_data">Share includes all data</string>
    <string name="sentinel_anr_title">Application Not Responding</string>
    <string name="sentinel_anr_message">Main thread is unresponsive</string>
    <string name="sentinel_thread_states">Thread states</string>
    <string name="sentinel_file">File</string>
    <string name="sentinel_line">Line</string>
    <string name="sentinel_timestamp">Timestamp</string>
    <string name="sentinel_exception_name">Exception name</string>
    <string name="sentinel_thread_name">Thread name</string>
    <string name="sentinel_thread_state">State</string>
    <string name="sentinel_priority">Priority</string>
    <string name="sentinel_message">Message</string>

    <string name="sentinel_logger_empty">No new logs collected.</string>

    <string name="sentinel_certificate">Certificate</string>
    <string name="sentinel_certificates_empty">No certificates collected.</string>
    <string name="sentinel_public_key">Public Key</string>
    <string name="sentinel_algorithm">Algorithm</string>
    <string name="sentinel_size">Size</string>
    <string name="sentinel_serial_number">Serial number</string>
    <string name="sentinel_version">Version</string>
    <string name="sentinel_signature">Signature</string>
    <string name="sentinel_oid">OID</string>
    <string name="sentinel_issuer">Issuer</string>
    <string name="sentinel_subject">Subject</string>
    <string name="sentinel_validity">Validity</string>
    <string name="sentinel_issued">Issued</string>
    <string name="sentinel_expires">Expires</string>
    <string name="sentinel_fingerprints">Fingerprints</string>
    <string name="sentinel_md5">MD5</string>
    <string name="sentinel_sha1">SHA-1</string>
    <string name="sentinel_sha256">SHA-256</string>
    <string name="sentinel_expired">Expired</string>
    <string name="sentinel_expiring_at">Expiring at %s</string>
    <string name="sentinel_certificates_user">User certificates</string>
    <string name="sentinel_certificates_system">System certificates</string>
    <string name="sentinel_certificates_notification_title">Sentinel detected %d invalid certificates</string>
    <string name="sentinel_certificates_soon_notification_title">Sentinel detected %d soon to expire certificates</string>
    <string name="sentinel_certificates_notification_subtitle">Tap here to see certificates.</string>
    <string name="sentinel_certificates_run_on_start">Run on start</string>
    <string name="sentinel_certificates_run_in_background">Run daily in background</string>
    <string name="sentinel_certificates_check_invalid_now">Check invalid now</string>
    <string name="sentinel_certificates_check_to_expire">Check about to expire</string>
    <string name="sentinel_expiring_in">Expiring in next</string>
    <string name="sentinel_days">Days</string>
    <string name="sentinel_weeks">Weeks</string>
    <string name="sentinel_months">Months</string>
    <string name="sentinel_years">Years</string>

    <string name="sentinel_notification_permission_denied">Notification permission denied. Can\'t show info</string>

    <string name="sentinel_unknown">unknown</string>
    <string name="sentinel_package_schema">package</string>
    <string name="sentinel_see_all_preferences">See all preferences</string>
    <string name="sentinel_all_preferences">All preferences</string>
    <string name="sentinel_empty_preferences_message">You are currently not targeting any specific preferences. Add them during Sentinel initialization.</string>

</resources>