<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/sentinel_icon_size"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="80dp">

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/manufacturerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_manufacturer" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/modelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_model" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/idView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_id" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/bootloaderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_bootloader" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/deviceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_device" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_board" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/architecturesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_architectures" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/codenameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_codename" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/releaseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_release" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/sdkView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_sdk" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/securityPatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_security_patch" />

        <com.infinum.sentinel.ui.views.SentinelItemTextView
            android:id="@+id/emulatorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sentinel_label="@string/sentinel_emulator" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>