<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sentinel_icon_size"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="32dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/sentinel_triggers"
            android:textAllCaps="true"
            android:textColor="@color/sentinel_color_primary" />

        <LinearLayout
            android:id="@+id/triggersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/manualTriggerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/sentinel_item_height"
                android:text="@string/sentinel_manual" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/shakeTriggerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/sentinel_item_height"
                android:text="@string/sentinel_shake" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/foregroundTriggerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/sentinel_item_height"
                android:text="@string/sentinel_foreground" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/usbTriggerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/sentinel_item_height"
                android:text="@string/sentinel_usb_connected" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/airplaneModeTriggerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/sentinel_item_height"
                android:text="@string/sentinel_airplane_mode_on" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/sentinel_share_format"
            android:textAllCaps="true"
            android:textColor="@color/sentinel_color_primary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/formatGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/sentinel_item_height"
            android:layout_marginTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/plainChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentinel_plain" />

            <com.google.android.material.chip.Chip
                android:id="@+id/markdownChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentinel_markdown" />

            <com.google.android.material.chip.Chip
                android:id="@+id/jsonChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentinel_json" />

            <com.google.android.material.chip.Chip
                android:id="@+id/xmlChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentinel_xml" />

            <com.google.android.material.chip.Chip
                android:id="@+id/htmlChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentinel_html" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>